[gd_scene load_steps=9 format=3 uid="uid://dslud28t6ch5m"]

[ext_resource type="Script" path="res://WorldState.gd" id="1_rhrim"]
[ext_resource type="Script" path="res://Objects/AchievementPopUp.gd" id="2_fev1l"]
[ext_resource type="FontFile" uid="uid://hq5u8hsbyvqc" path="res://assets/Fonts/Minecraft.ttf" id="3_3rw6b"]

[sub_resource type="LabelSettings" id="LabelSettings_qcc7f"]
font = ExtResource("3_3rw6b")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_m16gc"]
font = ExtResource("3_3rw6b")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_hewby"]
line_spacing = 16.0
font = ExtResource("3_3rw6b")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_4nxfh"]
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_1wjkt"]
font_size = 12
font_color = Color(0, 0, 0, 1)

[node name="World" type="Node"]
script = ExtResource("1_rhrim")

[node name="State" type="Node" parent="."]

[node name="Interface" type="Node" parent="."]

[node name="AchievementPopUp" type="PopupPanel" parent="Interface"]
size = Vector2i(193, 60)
script = ExtResource("2_fev1l")

[node name="ColorRect" type="ColorRect" parent="Interface/AchievementPopUp"]
offset_left = 4.0
offset_top = 4.0
offset_right = 189.0
offset_bottom = 56.0
color = Color(1, 1, 0.501961, 1)

[node name="VerticalMargin" type="MarginContainer" parent="Interface/AchievementPopUp/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/margin_top = 1

[node name="Container" type="BoxContainer" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin"]
layout_mode = 2
theme_override_constants/separation = 1
vertical = true

[node name="HeaderMargin" type="MarginContainer" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin/Container"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Header" type="Label" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin/Container/HeaderMargin"]
layout_mode = 2
text = "Achievement acquired!"
label_settings = SubResource("LabelSettings_qcc7f")

[node name="TitleMargin" type="MarginContainer" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin/Container"]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_right = 5

[node name="Title" type="Label" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin/Container/TitleMargin"]
layout_mode = 2
text = "Watering Can"
label_settings = SubResource("LabelSettings_m16gc")

[node name="DescriptionMargin" type="MarginContainer" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin/Container"]
layout_mode = 2
theme_override_constants/margin_left = -4
theme_override_constants/margin_right = 5

[node name="Description" type="Label" parent="Interface/AchievementPopUp/ColorRect/VerticalMargin/Container/DescriptionMargin"]
layout_mode = 2
text = "Pick up watering can"
label_settings = SubResource("LabelSettings_hewby")
horizontal_alignment = 1
vertical_alignment = 2

[node name="ChoiceDialog" type="PopupPanel" parent="Interface"]
size = Vector2i(120, 130)

[node name="ColorRect" type="ColorRect" parent="Interface/ChoiceDialog"]
offset_left = 4.0
offset_top = 4.0
offset_right = 116.0
offset_bottom = 126.0

[node name="VBoxContainer2" type="VBoxContainer" parent="Interface/ChoiceDialog/ColorRect"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
theme_override_constants/separation = 8

[node name="VBoxContainer2" type="VBoxContainer" parent="Interface/ChoiceDialog/ColorRect/VBoxContainer2"]
layout_mode = 2
theme_override_constants/separation = 1

[node name="Label" type="Label" parent="Interface/ChoiceDialog/ColorRect/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Choose:"
label_settings = SubResource("LabelSettings_4nxfh")

[node name="Description" type="Label" parent="Interface/ChoiceDialog/ColorRect/VBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "What to do"
label_settings = SubResource("LabelSettings_1wjkt")

[node name="VBoxContainer" type="VBoxContainer" parent="Interface/ChoiceDialog/ColorRect/VBoxContainer2"]
custom_minimum_size = Vector2(110, 1)
layout_mode = 2
theme_override_constants/separation = 1

[node name="Option1" type="Button" parent="Interface/ChoiceDialog/ColorRect/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Button" parent="Interface/ChoiceDialog/ColorRect/VBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Option 2"

[node name="GameTime" type="Timer" parent="."]
